--- a/2020-1/apunte/main.tex
+++ b/2020-1/apunte/main.tex
@@ -126,6 +126,7 @@
 
 \theoremstyle{remark}
 \newtheorem{observacion}{Observaci\'on}[section]
+\newtheorem{obs}{Observaci\'on}[section]
 \newtheorem{nota}{Nota}[section]
 
 \renewcommand{\partname }{Parte }
