Se unificó formato de los practicos con apunte

--- a/2020-1/apunte/main.tex
+++ b/2020-1/apunte/main.tex
@@ -45,7 +45,9 @@
 }
 \usepackage{hypcap}
 
-
+\numberwithin{equation}{section}
+\renewcommand\labelitemi{$\circ$}
+\setlist[enumerate, 1]{label={(\arabic*)}}
 
 %%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \tolerance=10000
