--- a/2020-1/practicos/Practico2-2020.tex
+++ b/2020-1/practicos/Practico2-2020.tex
@@ -1,54 +1,63 @@
-\documentclass[12pt,spanish,makeidx]{amsbook}
-\tolerance=10000
-\renewcommand{\baselinestretch}{1.3}
+% PDFLaTeX
+\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
 
+\usepackage[math]{kurier}
 
-
+\usepackage{etex}
 \usepackage{t1enc}
-\usepackage[spanish]{babel}
 \usepackage{latexsym}
 \usepackage[utf8]{inputenc}
 \usepackage{verbatim}
 \usepackage{multicol}
 \usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
+\usepackage{amsthm}
 \usepackage{calc}         % From LaTeX distribution
 \usepackage{graphicx}     % From LaTeX distribution
-\usepackage{ifthen}       % From LaTeX distribution
-\usepackage{subfigure}    % From CTAN/macros/latex/contrib/supported/subfigure
-\usepackage{pst-all}      % From PSTricks
-\usepackage{pst-poly}     % From pstricks/contrib/pst-poly
-\usepackage{multido}      % From PSTricks
+\usepackage{ifthen}
 \input{random.tex}        % From CTAN/macros/generic
+\usepackage{subfigure} 
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{matrix}
+\usepackage{mathtools}
+\usepackage{stackrel}
+\usepackage{enumitem}
+\usepackage{tkz-graph}
+%\usepackage{makeidx}
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,      
+	urlcolor=cyan,
+}
+\usepackage{hypcap}
+\numberwithin{equation}{section}
+% http://www.texnia.com/archive/enumitem.pdf (para las labels de los enumerate)
+\renewcommand\labelitemi{$\circ$}
+\setlist[enumerate, 1]{label={(\arabic*)}}
+\setlist[enumerate, 2]{label=\emph{\alph*)}}
 
 
-%% \theoremstyle{plain} %% This is the default
-\oddsidemargin 0.0in \evensidemargin -1.0cm \topmargin 0in
-\headheight .3in \headsep .2in \footskip .2in
-\setlength{\textwidth}{16cm} %ancho para apunte
-\setlength{\textheight}{21cm} %largo para apunte
-%\leftmargin 2.5cm
-%\rightmargin 2.5cm
-\topmargin 0.5 cm
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[LE,RO]{FAMAF}
-\fancyhead[RE,LO]{Matemática Discreta I}
-\fancyfoot[LE,RO]{\leftmark}
-\fancyfoot[RE,LO]{\thepage}
- 
-\renewcommand{\headrulewidth}{0.5pt}
-%\renewcommand{\footrulewidth}{0.5pt}
- 
-
-
+%%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\tolerance=10000
+\renewcommand{\baselinestretch}{1.3}
+\usepackage[a4paper, top=3cm, left=3cm, right=2cm, bottom=2.5cm]{geometry}
+\usepackage{setspace}
+%\setlength{\parindent}{0,7cm}% tamaño de sangria.
+\setlength{\parskip}{0,4cm} % separación entre parrafos.
+\renewcommand{\baselinestretch}{0.90}% separacion del interlineado
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\end{comment}
+%%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
+	\baselineskip=0.55truecm %original
 
-{\bf \begin{center} Práctico 2 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
 
-\smallskip
+{\bf \begin{center} \large  Práctico 2 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
+
+\vskip .5cm
 
 \begin {enumerate}
 %\item Contar las aplicaciones de $X_3=\{1,2,3\}$ en $X_4=\{1,2,3,4\}$.
@@ -65,19 +74,19 @@
 \item ¿Cuántos números capicúas de a lo sumo 5 dígitos hay?
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item ¿Cuántos números de 6 cifras pueden formarse con los dígitos de 112200?
 
-\smallskip
+\vskip .5cm
 
 \item ¿Cuántos números impares de cuatro cifras hay?
 
-\smallskip
+\vskip .5cm
 
 \item ¿Cuántos números múltiplos de  5 y menores que 4999 hay?
 
-\smallskip
+\vskip .5cm
 
 \item En los boletos viejos de ómnibus, aparecía un {\em número} de 5 cifras (en este caso podían empezar con 0), y uno tenía un {\it boleto capicúa} si el número lo era.
 \begin{enumerate}
@@ -85,11 +94,11 @@
 \item ¿Cuántos boletos había en los cuales no hubiera ningún dígito repetido?
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Las antiguas patentes de auto tenían una letra indicativa de la provincia y luego 6 dígitos. (En algunas provincias, Bs. As. y Capital, tenían 7 dígitos, pero ignoremos eso por el momento). Luego  vinieron patentes que tienen 3 letras y luego 3 dígitos. Finalmente, ahora las patentes tienen 2 letras, luego 3 dígitos y a continuación dos letras más ¿Cuántas patentes pueden hacerse con cada uno de los sistemas?
 
-\smallskip
+\vskip .5cm
 
 \item Si uno tiene 8 CD distintos de Rock, 7 CD distintos de música clásica y 5 CD distintos de cuartetos,
 \begin{enumerate}
@@ -100,27 +109,27 @@
 	\item Un sonidista en una fiesta de casamientos planea poner 3 CD, uno a continuación de otro. ¿Cuántas formas distintas tiene de hacerlo si le han dicho que no mezcle más de dos estilos?
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Mostrar que si uno arroja un dado $n$ veces y suma todos los resultados obtenidos, hay $\dfrac{6^n}{2}$ formas distintas de obtener una suma par.
 
-\smallskip
+\vskip .5cm
 
 \item ¿Cuántos enteros entre 1 y 10000 tienen exactamente un 7 y exactamente un 5 entre sus cifras?
 
-\smallskip
+\vskip .5cm
 
 \item ¿Cuántos subconjuntos de $\{0,1,2,\dots,8,9\}$ contienen al menos un impar?
 
-\smallskip
+\vskip .5cm
 
 \item El truco se juega con un mazo de 40 cartas, y se reparten 3 cartas a cada jugador. Obtener el 1 de espadas (el {\it macho}) es muy bueno. También lo es, por otros motivos, obtener un 7 y un 6 del mismo palo ({\it tener 33}). ¿Qué es más probable: obtener el macho, o tener 33?
 
-\smallskip
+\vskip .5cm
 
 \item ¿Cuántos comités pueden formarse de un conjunto de 6 mujeres y 4 hombres, si el comité debe estar compuesto por 3 mujeres y 2 hombres?
 
-\smallskip
+\vskip .5cm
 
 \item ¿De cuántas formas puede formarse un comité de 5 personas tomadas de un grupo de 11 personas entre las cuales hay 4 profesores y 7 estudiantes, si:
 \begin{enumerate}
@@ -133,26 +142,26 @@
 	\item El profesor $X$ y el estudiante $Y$ no pueden estar juntos en el comité?
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Si en un torneo de fútbol participan $2n$ equipos, probar que el número total de opciones posibles para la primera fecha es $1\cdot 3\cdot 5 \cdots (2n - 1)$. sugerencia: use un argumento por inducción. 
 
-\smallskip
+\vskip .5cm
 
 \item En una clase hay $n$ chicas y $n$ chicos. Dar el número de maneras de ubicarlos en una fila de modo que todas las chicas estén juntas.
 
-\smallskip
+\vskip .5cm
 
 \item ¿De cuántas maneras  distintas pueden sentarse 8 personas en una mesa circular?
 
-\smallskip
+\vskip .5cm
 
 \item \begin{enumerate}
 	\item ¿De cuántas maneras distintas pueden sentarse 6 hombres y 6 mujeres en una mesa circular si nunca deben quedar dos mujeres juntas?
 	\item \'Idem, pero con 10 hombres y 7 mujeres.
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item 
 \begin{enumerate}
@@ -161,11 +170,11 @@
 	\item ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA si se pide que las consonantes y las vocales se alternen?
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item ¿Cuántas diagonales tiene un polígono regular de $n$ lados?
 
-\smallskip
+\vskip .5cm
 
 \item Dados $m$, $n$ y $k$ naturales tales que $m \le k \le n$, probar que se verifica
 \begin{equation*}
@@ -173,14 +182,14 @@
 \end{equation*}
 
 
-\smallskip
+\vskip .5cm
 
 \item Probar que para todo $i$, $j$, $k \in {\mathbb N}_0$ vale
 \begin{equation*}
 	\binom{i + j + k}{i}\binom{j+k}{j} = \frac{(i+j+k)!}{i!j!k!}
 \end{equation*}
 
-\smallskip
+\vskip .5cm
 
 \item Demostrar que para todo $n \in \mathbb N$ vale:
 \begin{enumerate}
@@ -189,40 +198,41 @@
   \item $\displaystyle{\binom{n}{0} - \binom{n}{1} + \cdots + (-1)^n\binom{n}{n} = 0}$
   \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Probar que para todo natural $n$ vale que 
 \begin{equation*}
 	\binom{2n}{2} = 2 \binom{n}{2} + n^2.
 \end{equation*}
 
+\end{enumerate}
 
-
-\medskip
+\vskip .5cm
 
 
 
 \begin{center}
-	\textbf{Ejercicios adicionales (para repasar)}
+	\textbf{\large \S\, Ejercicios adicionales (para repasar)}
 \end{center}
 
-\medskip
+
+\begin{enumerate}[resume]
 
 \item Con $20$ socios de un club se desea formar $5$ listas electorales (disjuntas).
 Cada lista consta de $1$ Presidente, $1$ Tesorero y $2$ vocales.  ¿De cuántas
 formas puede hacerse?
 
-\smallskip
+\vskip .5cm
 
 \item ¿De cuántas formas se pueden fotografiar $7$ matrimonios en una hilera,
 de tal forma que cada hombre aparezca al lado de su esposa?
 
-\smallskip
+\vskip .5cm
 
 \item ¿De cuántas formas pueden distribuirse $14$ libros distintos entre dos
 personas de manera tal que cada persona reciba al menos $3$ libros?
 
-\smallskip
+\vskip .5cm
 
 \item
 Cecilia ha olvidado la contraseña de su correo electrónico, la cual est\'a formada por $11$ caracteres: $4$ d\'igitos y $7$ letras todos mezclados. ?`Cu\'al es el m\'aximo n\'umero de intentos que deber\'ia probar para entrar a su correo si:
