--- a/2020-1/practicos/Practico3-2020.tex
+++ b/2020-1/practicos/Practico3-2020.tex
@@ -1,60 +1,68 @@
-\documentclass[12pt,spanish,makeidx]{amsbook}
-\tolerance=10000
-\renewcommand{\baselinestretch}{1.3}
+% PDFLaTeX
+\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
 
+\usepackage[math]{kurier}
 
-
+\usepackage{etex}
 \usepackage{t1enc}
-\usepackage[spanish]{babel}
 \usepackage{latexsym}
 \usepackage[utf8]{inputenc}
 \usepackage{verbatim}
 \usepackage{multicol}
 \usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
+\usepackage{amsthm}
 \usepackage{calc}         % From LaTeX distribution
 \usepackage{graphicx}     % From LaTeX distribution
-\usepackage{ifthen}       % From LaTeX distribution
-\usepackage{subfigure}    % From CTAN/macros/latex/contrib/supported/subfigure
-\usepackage{pst-all}      % From PSTricks
-\usepackage{pst-poly}     % From pstricks/contrib/pst-poly
-\usepackage{multido}      % From PSTricks
+\usepackage{ifthen}
 \input{random.tex}        % From CTAN/macros/generic
+\usepackage{subfigure} 
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{matrix}
+\usepackage{mathtools}
+\usepackage{stackrel}
+\usepackage{enumitem}
+\usepackage{tkz-graph}
+%\usepackage{makeidx}
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,      
+	urlcolor=cyan,
+}
+\usepackage{hypcap}
+\numberwithin{equation}{section}
+% http://www.texnia.com/archive/enumitem.pdf (para las labels de los enumerate)
+\renewcommand\labelitemi{$\circ$}
+\setlist[enumerate, 1]{label={(\arabic*)}}
+\setlist[enumerate, 2]{label=\emph{\alph*)}}
 
 
-%% \theoremstyle{plain} %% This is the default
-\oddsidemargin 0.0in \evensidemargin -1.0cm \topmargin 0in
-\headheight .3in \headsep .2in \footskip .2in
-\setlength{\textwidth}{16cm} %ancho para apunte
-\setlength{\textheight}{21cm} %largo para apunte
-%\leftmargin 2.5cm
-%\rightmargin 2.5cm
-\topmargin 0.5 cm
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[LE,RO]{FAMAF}
-\fancyhead[RE,LO]{Matemática Discreta I}
-\fancyfoot[LE,RO]{\leftmark}
-\fancyfoot[RE,LO]{\thepage}
- 
-\renewcommand{\headrulewidth}{0.5pt}
-%\renewcommand{\footrulewidth}{0.5pt}
- 
-
-
+%%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\tolerance=10000
+\renewcommand{\baselinestretch}{1.3}
+\usepackage[a4paper, top=3cm, left=3cm, right=2cm, bottom=2.5cm]{geometry}
+\usepackage{setspace}
+%\setlength{\parindent}{0,7cm}% tamaño de sangria.
+\setlength{\parskip}{0,4cm} % separación entre parrafos.
+\renewcommand{\baselinestretch}{0.90}% separacion del interlineado
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\end{comment}
+%%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
+	\baselineskip=0.55truecm %original
 
-{\bf \begin{center} Práctico 3 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
+  {\bf \begin{center}\large  Práctico 3 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
 
-\smallskip
+\vskip .5cm
 
 
 \begin{enumerate}
 
 
-\smallskip
+\vskip .5cm
 
 \item Hallar el cociente y el resto de la división de:
 
@@ -69,7 +77,7 @@
 \end{enumerate}
 \end{multicols}
 
-\smallskip
+\vskip .5cm
 
 \item 
 \begin{enumerate}
@@ -78,10 +86,10 @@
 \end{enumerate}
 
 
-\smallskip
+\vskip .5cm
 \item Dado $m\in \mathbb N$ hallar los restos posibles de $m^2$ y $m^3$ en la división por $3,4,5,7,8, 11$.
 
-\smallskip
+\vskip .5cm
 \item Expresar en base 10 los siguientes enteros:
 \begin{multicols}{3}
 \begin{enumerate}
@@ -94,7 +102,7 @@
 \end{enumerate}
 \end{multicols}
 
-\smallskip
+\vskip .5cm
 
 \item Convertir
 \begin{multicols}{2}
@@ -106,11 +114,11 @@
 \end{enumerate}
 \end{multicols}
 
-\smallskip
+\vskip .5cm
 
 \item Calcular: a) $(2234)_5+(2310)_5$ \qquad \qquad b)$(10101101)_2+(10011)_2$.
 
-\smallskip
+\vskip .5cm
 
 \item Sean $a$, $b$, $c \in {\mathbb Z}$. Demostrar las siguientes afirmaciones:
   \begin{enumerate}
@@ -124,7 +132,7 @@
   \item Si $a \neq 0$\, y \,$a | b$, entonces \,$a| b\cdot c$.
   \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Dados $b,c$ enteros, probar las siguientes propiedades:
   \begin{enumerate}
@@ -136,15 +144,15 @@
   \item $b + c$ es par si y  sólo si $b$ y $c$ son ambos pares o ambos impares.
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Sea $n\in \mathbb Z$. Probar que $n$ es par si y sólo si $n^2$ es par.
 
-\smallskip
+\vskip .5cm
 
 \item Probar que $n(n+1)$ es par para todo $n$ entero.
 
-\smallskip
+\vskip .5cm
 
 \item Sean $a$, $b$, $c \in {\mathbb Z}$. ¿Cuáles de las siguientes afirmaciones son verdaderas? Justificar las respuestas.
   \begin{enumerate}
@@ -156,7 +164,7 @@
   \end{enumerate}
 
 
-\smallskip
+\vskip .5cm
 
 \item Probar que cualquiera sea $n \in {\mathbb N}$:
   \begin{enumerate}
@@ -164,7 +172,7 @@
   \item $3^{2n+2} - 8n - 9$\, es divisible por 64.
   \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Decir si es verdadero o falso justificando:
   \begin{enumerate}
@@ -173,15 +181,15 @@
   \item $(n+1)\cdot (5n+2)$\, es múltiplo de 2, $\forall n \in {\mathbb N}$.
   \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Probar que para todo $n \in {\mathbb Z}$, $n^2 + 2$ no es divisible por 4.
 
 
-\smallskip
+\vskip .5cm
 \item Probar que todo entero impar que no es múltiplo de 3, es de la forma $6m\pm 1$, con $m$ entero.
 
-\smallskip
+\vskip .5cm
 
 \item 
 \begin{enumerate}
@@ -190,16 +198,16 @@
 \end{enumerate}
 
 
-\smallskip
+\vskip .5cm
 \item Probar que si $a$ y $b$ son enteros entonces $a^2+b^2$ es divisible por 7 si y sólo si $a$ y $b$ son divisibles por 7.
 ¿Es lo mismo cierto para 3? ¿Para 5?
 
-\smallskip
+\vskip .5cm
 
 
 \item Encontrar $(7469,2464)$, $(2689,4001)$, $(2447,-3997)$, $(-1109,-4999)$.
 
-\smallskip
+\vskip .5cm
 
 \item
 Calcular el máximo común divisor y expresarlo como combinación lineal de los
@@ -218,11 +226,11 @@ números dados, para cada uno de  los siguientes pares de números:
 
 
 
-\smallskip
+\vskip .5cm
 
 \item Probar que no existen enteros $x$ e $y$ que satisfagan $x+y=100$ y $(x,y)=3$.
 
-\smallskip
+\vskip .5cm
 
 \item %Si $(a,b)=1$. Probar:
 \begin{enumerate}
@@ -233,41 +241,41 @@ números dados, para cada uno de  los siguientes pares de números:
 
 
 
-\smallskip
+\vskip .5cm
 
 \item Probar que si $n \in {\mathbb Z}$, entonces los números $2n+1$ y $\dfrac{n(n+1)}{2}$ son coprimos.
 
-\smallskip
+\vskip .5cm
 
 
 
 \item Encontrar todos los enteros positivos $a$ y $b$ tales que $(a,b)=10$ y $[a,b]=100$.
 
 
-\smallskip
+\vskip .5cm
 \item
 \begin{enumerate}
 \item Probar que si $d$ es divisor común de $a$ y $b$, entonces $\dfrac{(a,b)}{d} = \left(\dfrac{a}{d}, \dfrac{b}{d}\right)$.
 \item Probar que si $a,b\in \mathbb Z$ no nulos, entonces  $\displaystyle \frac a{(a,b)}$ y $\displaystyle \frac b{(a,b)}$ son coprimos.
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 \item Probar que 3  y 5 son números primos.
 
-\smallskip
+\vskip .5cm
 
 \item  Dar todos los números primos positivos menores que 100.
 
-\smallskip
+\vskip .5cm
 
 \item Determinar con el criterio de la raíz  cuáles de los siguientes números son primos: 113, 123, 131, 151, 199, 503.
 
-\smallskip
+\vskip .5cm
 
 \item Si $a\cdot b$ es un cuadrado y $a$ y $b$ son coprimos, probar que $a$ y $b$ son cuadrados.
 
-\smallskip
+\vskip .5cm
 
 \item 
 \begin{enumerate}
@@ -278,12 +286,12 @@ números dados, para cada uno de  los siguientes pares de números:
 \end{enumerate}
 
 
-\smallskip
+\vskip .5cm
 
 \item Probar que si $p_k$ es el $k$-ésimo primo positivo entonces
 $$p_{k+1}\leq p_1\cdot p_2\cdot \cdots \cdot p_k+1$$
 
-\smallskip
+\vskip .5cm
 
 
 \item Calcular el máximo común divisor y el mínimo común múltiplo de los siguientes pares de números usando la descomposición en números primos. 
