--- a/2020-1/practicos/Practico4-2020.tex
+++ b/2020-1/practicos/Practico4-2020.tex
@@ -1,61 +1,63 @@
-\documentclass[12pt,spanish,makeidx]{amsbook}
-\tolerance=10000
-\renewcommand{\baselinestretch}{1.3}
+% PDFLaTeX
+\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
 
+\usepackage[math]{kurier}
 
-
+\usepackage{etex}
 \usepackage{t1enc}
-\usepackage[spanish]{babel}
 \usepackage{latexsym}
 \usepackage[utf8]{inputenc}
 \usepackage{verbatim}
 \usepackage{multicol}
 \usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
+\usepackage{amsthm}
 \usepackage{calc}         % From LaTeX distribution
 \usepackage{graphicx}     % From LaTeX distribution
-\usepackage{ifthen}       % From LaTeX distribution
-\usepackage{subfigure}    % From CTAN/macros/latex/contrib/supported/subfigure
-\usepackage{pst-all}      % From PSTricks
-\usepackage{pst-poly}     % From pstricks/contrib/pst-poly
-\usepackage{multido}      % From PSTricks
+\usepackage{ifthen}
 \input{random.tex}        % From CTAN/macros/generic
+\usepackage{subfigure} 
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{matrix}
+\usepackage{mathtools}
+\usepackage{stackrel}
+\usepackage{enumitem}
+\usepackage{tkz-graph}
+%\usepackage{makeidx}
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,      
+	urlcolor=cyan,
+}
+\usepackage{hypcap}
+\numberwithin{equation}{section}
+% http://www.texnia.com/archive/enumitem.pdf (para las labels de los enumerate)
+\renewcommand\labelitemi{$\circ$}
+\setlist[enumerate, 1]{label={(\arabic*)}}
+\setlist[enumerate, 2]{label=\emph{\alph*)}}
 
 
-%% \theoremstyle{plain} %% This is the default
-\oddsidemargin 0.0in \evensidemargin -1.0cm \topmargin 0in
-\headheight .3in \headsep .2in \footskip .2in
-\setlength{\textwidth}{16cm} %ancho para apunte
-\setlength{\textheight}{21cm} %largo para apunte
-%\leftmargin 2.5cm
-%\rightmargin 2.5cm
-\topmargin 0.5 cm
-
-\newcommand{\nc}{\newcommand}
-\nc{\RR}{\mathbb{R}} \nc{\HH}{\mathbb{H}} \nc{\CC}{\mathbb{C}} \nc{\ZZ}{\mathbb{Z}}
-\nc{\FF}{\mathbb{F}} \nc{\NN}{\mathbb{N}} \nc{\QQ}{\mathbb{Q}} \nc{\PP}{\mathbb{P}}
-
-\nc{\ben}{\begin{enumerate}} \nc{\een}{\end{enumerate}} \nc{\x}{\varphi}
-\nc{\vs}{\vspace{1cm}}
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[LE,RO]{FAMAF}
-\fancyhead[RE,LO]{Matemática Discreta I}
-\fancyfoot[LE,RO]{\leftmark}
-\fancyfoot[RE,LO]{\thepage}
- 
-\renewcommand{\headrulewidth}{0.5pt}
-%\renewcommand{\footrulewidth}{0.5pt}
- 
-
-
+%%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\tolerance=10000
+\renewcommand{\baselinestretch}{1.3}
+\usepackage[a4paper, top=3cm, left=3cm, right=2cm, bottom=2.5cm]{geometry}
+\usepackage{setspace}
+%\setlength{\parindent}{0,7cm}% tamaño de sangria.
+\setlength{\parskip}{0,4cm} % separación entre parrafos.
+\renewcommand{\baselinestretch}{0.90}% separacion del interlineado
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\end{comment}
+%%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
+	\baselineskip=0.55truecm %original
 
-{\bf \begin{center} Práctico 4 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
 
-\smallskip
+{\bf \begin{center}\large Práctico 4 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
+
+\vskip .5cm
 
 
 \begin{enumerate}
@@ -66,17 +68,17 @@
 \end{enumerate}
 
 
-\smallskip
-\item Sea $n\in\NN$. Probar que todo n\'umero de la forma $4^n-1$ es divisible por 3.
+\vskip .5cm
+\item Sea $n\in\mathbb N$. Probar que todo n\'umero de la forma $4^n-1$ es divisible por 3.
 
-\smallskip
+\vskip .5cm
 \item Probar que el resto de dividir $n^2$ por 4 es igual a 0 si $n$ es par y 1 si $n$ es impar.
 
-%\smallskip
+%\vskip .5cm
 
 %\item Probar que si las longitudes de los lados de un tri\'angulo rect\'angulo son n\'umeros enteros, entonces los catetos no pueden ser ambos impares.
 
-\smallskip
+\vskip .5cm
 \item
 \begin{enumerate}
 \item
@@ -85,18 +87,18 @@ Probar las reglas de divisibilidad por 2, 3, 4, 5, 8, 9 y 11.% que no hayan sido
 $$ \qquad 12342  \, \qquad   \qquad  5176 \, \qquad \qquad  314573\,  \qquad  \qquad  899.$$
 \end{enumerate}
 
-%\smallskip \item Hallar los restos posibles en la divisi\'on de $n^2$ por 3.
+%\vskip .5cm \item Hallar los restos posibles en la divisi\'on de $n^2$ por 3.
 
-\smallskip
+\vskip .5cm
 \item Sean $a$, $b$, $c$ n\'umeros enteros, ninguno divisible por 3. Probar que 
 $$a^2 + b^2 + c^2\equiv 0 \pmod 3.$$% es divisible por 3.
 
 
-\smallskip
+\vskip .5cm
 \item Hallar la cifra de las unidades y la de las decenas del n\'umero $7^{15}$.
 
 
-\smallskip
+\vskip .5cm
 \item Hallar el resto en la divisi\'on de $x$ por 5 y por 7 para:
  \begin{enumerate}
 \item $x=1^8 + 2^8 + 3^8 + 4^8 + 5^8 + 6^8 + 7^8 + 8^8$;
@@ -104,7 +106,7 @@ $$a^2 + b^2 + c^2\equiv 0 \pmod 3.$$% es divisible por 3.
 \end{enumerate}
 %\end{multicols}
 
-\smallskip
+\vskip .5cm
 \item Hallar todos los $x$ que satisfacen:
 \begin{multicols}{3}
  \begin{enumerate}
@@ -119,13 +121,13 @@ $$a^2 + b^2 + c^2\equiv 0 \pmod 3.$$% es divisible por 3.
  \end{enumerate}
 \end{multicols}
 
-%\smallskip
-\item Sean $a$, $b$, $m \in {\ZZ}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Probar que la ecuaci\'on $a\cdot x \equiv b\,( m)$ tiene
+%\vskip .5cm
+\item Sean $a$, $b$, $m \in {\mathbb Z}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Probar que la ecuaci\'on $a\cdot x \equiv b\,( m)$ tiene
 soluci\'on si y s\'olo si la ecuaci\'on
 \[ \frac{a}{d}\cdot x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right)\]
 tiene soluci\'on.
 
-\smallskip
+\vskip .5cm
 \item Resolver las siguientes ecuaciones:
 \begin{multicols}{3}
  \begin{enumerate}
@@ -135,10 +137,10 @@ tiene soluci\'on.
  \end{enumerate}
 \end{multicols}
 
-\smallskip
+\vskip .5cm
 \item Resolver la ecuaci\'on $221 x \equiv 85\,\, (340)$. Hallar todas las soluciones $x$ tales que $0 \le x < 340$.
 
-\smallskip
+\vskip .5cm
 \item 
 \begin{enumerate}
 	\item[(i)] Encontrar todas las soluciones de la ecuaci\'on en congruencia
@@ -148,7 +150,7 @@ tiene soluci\'on.
 \end{enumerate}
 
 
-\smallskip
+\vskip .5cm
 \item 
 \begin{enumerate}
 \item[(i)] Encontrar todas las soluciones de la ecuaci\'on en congruencia
@@ -161,8 +163,8 @@ usando el método visto en clase.
 
 
 
-\smallskip
-\item Dado $t \in {\ZZ}$, decimos que $t$ es {\it inversible m\'odulo $m$} si existe $h \in {\ZZ}$ tal que $th\equiv 1\,(\ m)$.
+\vskip .5cm
+\item Dado $t \in {\mathbb Z}$, decimos que $t$ es {\it inversible m\'odulo $m$} si existe $h \in {\mathbb Z}$ tal que $th\equiv 1\,(\ m)$.
   \begin{enumerate}
   \item ¿Es 5 inversible m\'odulo 17?
 %  \item ¿Existe alg\'un $m$ tal que $m$ sea inversible m\'odulo $m$?
@@ -173,18 +175,18 @@ usando el método visto en clase.
 
 
 %\begin{enumerate}
-%\item Dar la tabla de la suma y del producto en $\ZZ_2$, $\ZZ_3$ y $\ZZ_4$.
-%  \item Probar que $\ZZ_m$ es un anillo.
+%\item Dar la tabla de la suma y del producto en $\mathbb Z_2$, $\mathbb Z_3$ y $\mathbb Z_4$.
+%  \item Probar que $\mathbb Z_m$ es un anillo.
 % \end{enumerate}
 
-\smallskip
+\vskip .5cm
 \item Encontrar los enteros cuyos cuadrados divididos por 19 dan resto 9.
 
-\smallskip
+\vskip .5cm
 
 \item Probar que todo n\'umero impar $a$ satisface: $a^4 \equiv 1(16)$, $a^8 \equiv 1(32)$, $a^{16}\equiv 1(64)$.\\ ¿Se puede asegurar que $a^{2^n} \equiv 1 (2^{n+2})$?
 
-\smallskip
+\vskip .5cm
 
 \item Encontrar el resto en la divisi\'on de $a$ por $b$ en los siguientes casos:
 \begin{multicols}{2}
@@ -196,51 +198,51 @@ usando el método visto en clase.
 \end{enumerate}
 \end{multicols}
 
-%\smallskip
+%\vskip .5cm
 \item Obtener el resto en la divisi\'on de $2^{21}$ por 13; de $3^8$ por 5 y de
  $8^{25}$ por 127.
 %$$ \text{ (a)  $2^{21}$\, por \,13;\qquad
  %$3^8$\, por \,5 $8^{25}$\, por \,127.}$$
 
 
-%\smallskip
+%\vskip .5cm
 
 %\item Hallar todos los enteros que satisfacen simult\'aneamente:
 
 %$x \equiv 1\ ( 3); $ \qquad $x \equiv 1 \ ( 5)$; \qquad $x \equiv 1\ ( 7)$.
 
-%\smallskip
+%\vskip .5cm
 %\item Hallar el menor entero positivo que satisface simult\'aneamente las siguientes congruencias:
 
 %$x\equiv 2\ ( 3)$; \qquad $x \equiv 3\ ( 5)$; \qquad $x \equiv 5\ (2)$.
 
-%\smallskip
+%\vskip .5cm
 
 %\item Hallar 4 enteros consecutivos divisibles por \,5, 7, 9 y 11 respectivamente.
 
-\smallskip
+\vskip .5cm
 \item \begin{enumerate}
 \item Probar que no existen enteros no nulos tales que $x^2 + y^2 = 3z^2$.
 \item Probar que no existen n\'umeros racionales no nulos $a$, $b$, $r$ tales que $3(a^2 + b^2) = 7r^2$.
 \end{enumerate}
 
-\smallskip
+\vskip .5cm
 
 %\item Cinco hombres recogieron en una isla un cierto n\'umero de cocos y resolvieron repartirlos al d\'\i a siguiente. Durante la noche uno de ellos decidi\'o separar su parte y para ello %dividi\'o el total en cinco partes y di\'o un coco que sobraba a un mono y se fue a dormir. Enseguida otro de los hombres hizo lo mismo, dividiendo lo que hab\'\i a quedado por cinco, dando %un coco que sobraba a un mono y retirando su parte, se fue a dormir. Uno tras otro los tres restantes hicieron lo mismo, d\'andole a un mono el coco que sobraba. A la ma\~nana siguiente %repartieron los cocos restantes, d\'andole a un mono el coco sobrante.
 %>Cu\'al es el n\'umero m\'\i nimo de cocos que se recogieron?
 
-%\smallskip
+%\vskip .5cm
 
 %\item La producci\'on diaria de huevos en una granja es inferior a 75.
 %Cierto d\'\i a el recolector inform\'o que la cantidad de huevos recogida era tal que contando de a 3 sobraban 2, contando de a 5 sobraban 4 y
 %contando de a 7 sobraban 5. El capataz, dijo que eso era imposible. >Qui\'en ten\'\i a raz\'on? Justificar.
 
-%\smallskip
+%\vskip .5cm
 
 \item Probar que si \,$(a,1001)=1$\, entonces \,$1001$\, divide a \,$a^{720}-1$.
 
 
-\smallskip
+\vskip .5cm
 
 
 \
@@ -248,17 +250,17 @@ usando el método visto en clase.
 
 \noindent (*): ejercicios opcionales de mayor dificultad.
 
-\smallskip
+\vskip .5cm
 
 \item (*) ¿Para qu\'e valores de \,$n$\, es \,$10^n-1$\, divisible por \,$11$?
 
 
-\smallskip
+\vskip .5cm
 
-\item (*) Probar que para ning\'un $n\in\NN$ se puede partir el conjunto $\{n,n+1,\ldots, n+5\}$ en dos partes
+\item (*) Probar que para ning\'un $n\in\mathbb N$ se puede partir el conjunto $\{n,n+1,\ldots, n+5\}$ en dos partes
 disjuntas no vac\'\i as tales que los productos de los elementos que las integran sean iguales.
 
-\smallskip
+\vskip .5cm
 
 \item (*) El n\'umero \,$2^{29}$\, tiene nueve cifras y todas distintas.
 ¿Cu\'al d\'\i gito falta? (No est\'a permitido el uso de calculadora).
@@ -290,7 +292,7 @@ falsas. Justificar.
 
 \item Existe un n\'umero entero $x$ tal que $1001 x\equiv 104 \mod(39)$.
 
-\item Existe $n\in\NN$ tal que $4n+3$ es suma de dos cuadrados.
+\item Existe $n\in\mathbb N$ tal que $4n+3$ es suma de dos cuadrados.
 
 \item $777^{151}\equiv 7 \mod(11)$.
 
@@ -300,7 +302,7 @@ falsas. Justificar.
 
 \
 
-\item Sean $a,b\in\ZZ$.  Probar que si $11$ divide a $a^2+5b^2$ entonces $a$ y $b$ son
+\item Sean $a,b\in\mathbb Z$.  Probar que si $11$ divide a $a^2+5b^2$ entonces $a$ y $b$ son
 tambi\'en divisibles por $11$.
 
 \
