--- a/2020-1/practicos/Practico5-2020.tex
+++ b/2020-1/practicos/Practico5-2020.tex
@@ -1,198 +1,62 @@
-\documentclass[12pt,spanish,makeidx]{amsbook}
-\tolerance=10000
-\renewcommand{\baselinestretch}{1.3}
+% PDFLaTeX
+\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
 
+\usepackage[math]{kurier}
 
-
+\usepackage{etex}
 \usepackage{t1enc}
-\usepackage[spanish]{babel}
 \usepackage{latexsym}
 \usepackage[utf8]{inputenc}
 \usepackage{verbatim}
 \usepackage{multicol}
 \usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
+\usepackage{amsthm}
 \usepackage{calc}         % From LaTeX distribution
 \usepackage{graphicx}     % From LaTeX distribution
-\usepackage{ifthen}       % From LaTeX distribution
-\usepackage{subfigure}    % From CTAN/macros/latex/contrib/supported/subfigure
-\usepackage{tikz}
-\usepackage{tkz-graph}
-\usepackage{tikz-3dplot} %for tikz-3dplot functionality
-\usepackage{pgfplots}
-\usetikzlibrary{graphs}
-\usetikzlibrary{matrix}
+\usepackage{ifthen}
 \input{random.tex}        % From CTAN/macros/generic
-
-
-%% \theoremstyle{plain} %% This is the default
-\oddsidemargin 0.0in \evensidemargin -1.0cm \topmargin 0in
-\headheight .3in \headsep .2in \footskip .2in
-\setlength{\textwidth}{16cm} %ancho para apunte
-\setlength{\textheight}{21cm} %largo para apunte
-%\leftmargin 2.5cm
-%\rightmargin 2.5cm
-\topmargin 0.5 cm
-
-
-
+\usepackage{subfigure} 
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{matrix}
+\usepackage{mathtools}
+\usepackage{stackrel}
+\usepackage{enumitem}
+\usepackage{tkz-graph}
+%\usepackage{makeidx}
 \usepackage{hyperref}
 \hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,      
-    urlcolor=cyan,
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,      
+	urlcolor=cyan,
 }
 \usepackage{hypcap}
-
-\newcommand\itemitem[1]{\item[#1]}
-
-
-\newcommand{\ExampleSubFigure}[2][0.3333]{%
-\subfigure[Example #2]{%
-  \begin{minipage}[t]{#1\textwidth}
-    \parbox[b]{\textwidth}{%
-      \centering
-      \input{lgc/#2.inl}}
-  \end{minipage}}}
+\numberwithin{equation}{section}
+% http://www.texnia.com/archive/enumitem.pdf (para las labels de los enumerate)
+\renewcommand\labelitemi{$\circ$}
+\setlist[enumerate, 1]{label={(\arabic*)}}
+\setlist[enumerate, 2]{label=\emph{\alph*)}}
 
 
-%% \theoremstyle{plain} %% This is the default
-\oddsidemargin 0.0in \evensidemargin -1.0cm \topmargin 0in
-\headheight .3in \headsep .2in \footskip .2in
-\setlength{\textwidth}{16cm} %ancho para apunte
-\setlength{\textheight}{21cm} %largo para apunte
-%\leftmargin 2.5cm
-%\rightmargin 2.5cm
-\topmargin 0.5 cm
-
-
-
-%% \theoremstyle{plain} %% This is the default
-
-
-
-\renewcommand{\thesection}{\thechapter.\arabic{section}}
-\renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
-
-
-
-
-\newtheorem{teorema}{Teorema}[section]
-\newtheorem{proposicion}[teorema]{Proposici\'on}
-\newtheorem{corolario}[teorema]{Corolario}
-\newtheorem{lema}[teorema]{Lema}
-
-\theoremstyle{definition}
-
-\newtheorem{definicion}{Definici\'on}[section]
-\newtheorem{ejemplo}{Ejemplo}[section]
-\newtheorem{problema}{Problema}[section]
-\newtheorem{ejercicio}{Ejercicio}[section]
-\newtheorem{ejerciciof}{}[section]
-
-\theoremstyle{remark}
-\newtheorem{observacion}{Observaci\'on}[section]
-\newtheorem{nota}{Nota}[section]
-
-
-
-\renewcommand{\abstractname}{Resumen}
-\renewcommand{\partname }{Parte }
-\renewcommand{\indexname}{Indice }
-\renewcommand{\figurename }{Figura }
-\renewcommand{\tablename }{Tabla }
-\renewcommand{\proofname}{Demostraci\'on}
-\renewcommand{\refname }{Referencias }
-\renewcommand{\appendixname }{Ap\'endice }
-\renewcommand{\contentsname }{Contenidos }
-\renewcommand{\chaptername }{Cap\'\i tulo }
-\renewcommand{\bibname }{Bibliograf\'\i a }
-
-
-
-
-
-\def\conc{+\hspace{-1.5ex}+\hspace{0.5ex}}
-\def\con{{\rm con}}
-\def\hn{\hspace{-0.2cm}}
-\def\h4n{\hspace{-0.4cm}}
-\def\impli{\Rightarrow}
-\def\ssi{\equiv}
-\def\disc{\not\ssi}
-\def\cons{\Leftarrow}
-\def\la{\leftarrow}
-\def\lt{\triangleleft}
-\def\lv{[\;\,]}
-\def\Max{ {\rm Max} }
-\def\Min{ {\rm Min} }
-\def\N{I\hspace{-0.8ex} N}
-\def\noi{\noindent}
-\def\R{I\hspace{-0.8ex} R}
-\def\ra{\rightarrow}
-\def\Rn{\R^{n}}
-\def\rt{\triangleright}
-%\def\tomar{\uparrow}
-\def\tomar{\hspace{-0.6ex}\uparrow\hspace{-0.6ex}}
-%\def\tirar{\downarrow}
-\def\tirar{\hspace{-0.6ex}\downarrow\hspace{-0.6ex}}
-\def\udo{ {\rm\bf\underline{do}} }
-\def\ufi{ {\rm\bf\underline{fi}} }
-\def\uif{ {\rm\bf\underline{if}} }
-\def\uod{ {\rm\bf\underline{od}} }
-\def\v3{\vspace{0.3cm}}
-\def\var{{\rm var}}
-\def\[{|\hspace{-0.2ex} [}
-\def\]{]\hspace{-0.2ex} |}
-\def\true{\mbox{\it true\ }}
-\def\false{\mbox{\it false\ }}
-
-\newcommand{\bag}[1]{ [\hspace{-0.4ex}[ #1 ]\hspace{-0.4ex}] }
-\newcommand{\abs}[1]{ [\hspace{-0.4ex}[ #1 ]\hspace{-0.4ex}] }
-%\newcommand{\binom}[2]{ \left(\hspace{-1.2ex}\begin{array}{c} #1 \\ #2 \end{array} \hspace{-1.2ex}\right) }
-\newcommand{\cau}[2]{\noi #1 \hspace{0.5cm}\{{\sl #2}\} }
-\newcommand{\causa}[2]{\vspace{0.15cm} \noi #1 \hspace{0.5cm} \{{\sl #2}\} \vspace{0.15cm}}
-\newcommand \RR{{\mathbb R}}
-\newcommand \ZZ{{\mathbb Z}}
-\newcommand \NN{{\mathbb N}}
-%\newcommand \supr{\displaystyle{\ \,{\mbox{\footnotesize S}}\hspace{-1.7ex}\bigcirc\, }}
-\newcommand \supr{\displaystyle{\ \,\vee \hspace{-1.9ex}\bigcirc\,}}
-\newcommand \infi{\displaystyle{\ \,\wedge\hspace{-1.9ex}\bigcirc\,}}
-%\newcommand \infi{\displaystyle{\ \,{\mbox{\footnotesize I}}\hspace{-1.5ex}\bigcirc\, }}
-\newcommand \mcd{\operatorname{mcd}}
-\newcommand \mcm{\operatorname{mcm}}
-\newcommand \sisolosi{\Leftrightarrow}
-
-
-
-
-
-
-\newcommand\flecha{\Rightarrow}
-
-\newcommand{\programa}[1]{  \vskip .5cm \noindent Programa: {\it #1} }
-\newcommand{\principio}[1]{\vskip .3 cm \centerline{\sc #1} \vskip .3cm}
-
-
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[LE,RO]{FAMAF}
-\fancyhead[RE,LO]{Matemática Discreta I}
-\fancyfoot[LE,RO]{\leftmark}
-\fancyfoot[RE,LO]{\thepage}
- 
-\renewcommand{\headrulewidth}{0.5pt}
-%\renewcommand{\footrulewidth}{0.5pt}
- 
-
-
+%%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\tolerance=10000
+\renewcommand{\baselinestretch}{1.3}
+\usepackage[a4paper, top=3cm, left=3cm, right=2cm, bottom=2.5cm]{geometry}
+\usepackage{setspace}
+%\setlength{\parindent}{0,7cm}% tamaño de sangria.
+\setlength{\parskip}{0,4cm} % separación entre parrafos.
+\renewcommand{\baselinestretch}{0.90}% separacion del interlineado
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\end{comment}
+%%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
+	\baselineskip=0.55truecm %original
 
-{\bf \begin{center} Práctico 5 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
+{\bf \begin{center}\large  Práctico 5 \\ Matemática Discreta I -- Año 2020/1 \\ FAMAF \end{center}}
 
-\medskip
+\vskip .5cm
 
 
 
@@ -202,7 +66,7 @@
 \item  ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para cuáles valores de $n$ se puede encontrar un dibujo de $K_n$ con la propiedad que las líneas representan las aristas sin cruzarse?
 
 
-\medskip
+\vskip .5cm
 \item Encuentre un isomorfismo entre los grafos por las siguientes listas. (Ambas listas especifican versiones de un famoso grafo conocida como {\it grafo de Petersen}.)
 $$
 \begin{matrix}
@@ -219,14 +83,14 @@ f&g&h&i&j&i&j&f&g&h
 \end{matrix}
 $$
 
-\medskip
+\vskip .5cm
 \item
 \begin{enumerate}
 \item Encuentre todos los grafos de 5 vértices y 2 aristas no isomorfos entre sí.
  \item ¿Cuál es el máximo número de aristas que puede tener un grafo de 5 vértices?
 \end{enumerate}
 
-\medskip
+\vskip .5cm
 
 \item Para cada una de las siguientes secuencias, encuentre un grafo que tenga exactamente las valencias indicadas o demuestre que tal grafo no existe:
 \begin{multicols}{3}
@@ -240,7 +104,7 @@ $$
 \end{enumerate}
 \end{multicols}
 
-\medskip
+\vskip .5cm
 
 \item Demuestre que los siguientes pares de grafos son isomorfos (encuentre un isomorfismo):
 
@@ -318,7 +182,7 @@ $$
 
 
 
-\medskip
+\vskip .5cm
 
 \item Sean $G=(V,E)$ y $G^{\prime}=(V^{\prime},E^{\prime})$ dos grafos y sea $\alpha :V \mapsto V^{\prime}$ una función tal que $\delta (v)=\delta (\alpha (v)) \;\;\forall\,\; v \in V$.
 \begin{enumerate}
@@ -326,11 +190,11 @@ $$
 	\item ¿Puede afirmarlo si $|V|=3$ ó 4?.
 \end{enumerate}
 
-
+\vskip .5cm
 
 \item Encuentre una función del grafo $A$ al $B$ que preserve valencias. ¿Es un isomorfismo?.
 
-
+\vskip .2cm
 \begin{tabular}{llll}
 	$A:$ & &\qquad$B:$& \\
 	 &
@@ -370,16 +234,16 @@ $$
 	\end{tikzpicture}
 \end{tabular}
 
-
+\vskip .5cm
 
 \item Pruebe que si $G$ es un grafo con más de un vértice, entonces existen dos vértices con la misma valencia.
 
-
+\vskip .5cm
 
 \item Si $G=(V,E)$ grafo,  el \textit{grafo complemento}  es $G' = (V,E')$, donde $E'$ son todos los 2-subconjuntos de $V$ que no están en $E$. Es decir, el grafo complemento tiene los mismos vértices que el grafo original y todas las aristas que le faltan a $G$ para ser grafo completo. 
 \begin{enumerate}
 	\item  Halle el complemento de los siguientes grafos:
-	
+	\vskip .2cm
 
 
 	\begin{tikzpicture}[scale=1]
@@ -420,18 +284,18 @@ $$
 
 	
 
-\medskip
+\vskip .5cm
 
 	\item  Si $V=\{ v_1 \dots v_n \} $ y $\delta (v_i)=d_i \;\;\forall\,\; i=1,\dots , n\,$, calcule las valencias de el grafo complemento.
 \end{enumerate}
 
-\medskip
+\vskip .5cm
 
 
 
 
 \item Pruebe que los siguientes grafos no son isomorfos:
-
+\vskip .2cm
 
 \begin{tabular}{llll}
 	&
@@ -466,9 +330,8 @@ $$
 
 
 
-\medskip
+\vskip .5cm
 
-\item
 
 \item Dados los siguientes grafos:
 
@@ -576,7 +439,7 @@ $$
 \item Halle las componentes conexas del grafo (7).
 \end{enumerate} 
 
-\medskip
+\vskip .5cm
 
 \item Dado el siguiente grafo
 $$
@@ -590,11 +453,11 @@ $$
 $$
 encuentre un ciclo hamiltoniano (si existe). Determine si existe una caminata euleriana y en caso de ser así encuentre una. 
 
-\medskip
+\vskip .5cm
 
 \item Un ratón intenta comer un $3\times 3\times 3$ cubo de queso. Él comienza en una esquina y come un subcubo de $1\times 1\times 1$, para luego pasar a un subcubo adyacente. ¿Podrá el ratón terminar de comer el queso en el centro?
 
-
+\vskip .5cm
 \item Dé todos los árboles de 5 vértices no isomorfos.
 
 
